master - Fix horizontal scroll bug

--- a/client/stylesheets/styles.css
+++ b/client/stylesheets/styles.css
@@ -1,3 +1,7 @@
+body {
+  overflow-x: hidden;
+}
+
 .panel {
   position: relative;
   margin-top: 1.5em;
